# wallet_flutter

./: .gitignore  Cargo.toml  Makefile  README.md  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
cargo/: .gitignore  Cargo.toml  build.rs  build.sh
cargo/.cargo/: config
cargo/protos/: coin.proto
cargo/src/: connector.rs  java_glue.rs.in  lib.rs
cargo/src/protos/: coin.rs
ios/Flutter/: flutter_export_environment.sh
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lang/: sk.json
lib/: constants.dart  main.dart
lib/components/: DrawerFabs.dart  DrawerWidget.dart
lib/models/: bal_params.dart  bal_params.g.dart  balance.dart  balance.g.dart  balances.dart  balances.g.dart  coin.dart  coin.g.dart  coin_list.dart  coinbase.dart  config.dart  rust.dart  transaction.dart  transaction.g.dart  tx_output.dart  tx_output.g.dart  tx_output_list.dart  wallet.dart  wallet.g.dart  wallet_list.dart
lib/screens/: coins.dart  drawer.dart  fabs.dart  homepage.dart  scan.dart  settings.dart  transactions.dart  wallet.dart  web_qr_connect.dart
lib/stores/: balance.dart  balance.g.dart  coin.dart  coin.g.dart  config.dart  config.g.dart  fab.dart  fab.g.dart  fabs.dart  fabs.g.dart  homepage.dart  homepage.g.dart  log.dart  log.g.dart  main.dart  main.g.dart  network.dart  network.g.dart  select.dart  select.g.dart  settings.dart  settings.g.dart  sort.dart  sort.g.dart  transaction.dart  transaction.g.dart  transactions.dart  wallet.dart  (+1 more)
pb/: config.proto  transaction.proto  wallet.proto
test/: mobx_test.dart
web/: index.html
(+76 files in other folders)
