[package]
name = "walletjni"
version = "0.1.0"
authors = ["slim <dsslimshaddy@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "walletjni"
crate-type = ["cdylib"]

[dependencies]
wallet = { path = "../../wallet" }
log = "0.4.6"
log-panics = "2.0"
android_logger = "0.8"
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
bindgen = "0.49.0"
rust_swig = "0.3.0"
walkdir = "2.2.7"
