[package]
name = "walletjni"
version = "0.1.0"
authors = ["slim <dsslimshaddy@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "walletjni"
crate-type = ["cdylib"]

[dependencies]
wallet = { path = "../../wallet" }
protobuf = "2.8.0"
jni = "0.13.1"
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
protoc-rust = "2.8.0"